"Updated project description and title, and added link to GitHub repository."

--- a/Projet.html
+++ b/Projet.html
@@ -276,14 +276,14 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="">
-                    <h3>TODO</h3>
-                    <!-- <h5>★★★★★</h5> -->
+                    <h3>Quake-III-Arena (Code Source)</h3>
+                    <h5>★★★★★</h5>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Code pour calculer la racine carrée inverse rapide. Une approximation rapide qui s'opère à très bas niveau et qui est révolutionnaire pour l'époque. (C ...)</p>
+                    <a href="https://github.com/RaykeshR/Quake-III-Arena/blob/6fbdc84f976a4a98fd45ff1911a199c7e507b676/code/game/q_math.c#L552" title="">Read More</a>
                 </div>
             </div>
         </div>
