"Updated image source and added title to 'Read More' link in Quake-III-Arena project card"

--- a/Projet.html
+++ b/Projet.html
@@ -275,7 +275,7 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
+                    <img src="./images/CodeSourceQuake-III-Arena.png" style="max-width: 275px;">
                     <h3>Quake-III-Arena (Code Source)</h3>
                     <h5>★★★★★</h5>
                 </div>
@@ -283,7 +283,7 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Code pour calculer la racine carrée inverse rapide. Une approximation rapide qui s'opère à très bas niveau et qui est révolutionnaire pour l'époque. (C ...)</p>
-                    <a href="https://github.com/RaykeshR/Quake-III-Arena/blob/6fbdc84f976a4a98fd45ff1911a199c7e507b676/code/game/q_math.c#L552" title="">Read More</a>
+                    <a href="https://github.com/RaykeshR/Quake-III-Arena/blob/6fbdc84f976a4a98fd45ff1911a199c7e507b676/code/game/q_math.c#L552" title="ligne 552 du fichier q_math.c">Read More</a>
                 </div>
             </div>
         </div>
