On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -166,7 +166,7 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Crackeur de Fichier ZIP utilisant du multiprocessing pour faire une attaque par dictionnaire avec le dictionnaire rockyou. Le mot de passe était composé de 2 mots de rockyou séparés par un espace. (Python, ...)</p> <!-- TODO -->
-                    <a href="#" title="Pour des raisons d'éthique, ce projet n'a pas de code source accessible, mais il y a des détails sur mon LinkedIn">Plus de détails</a>
+                    <a href="https://www.linkedin.com/in/raykesh-ravirooban-5a8b44230" title="Pour des raisons d'éthique, ce projet n'a pas de code source accessible, mais il y a des détails sur mon LinkedIn" rel="noopener noreferrer">Plus de détails</a>
                 </div>
             </div>
         </div>
