"Added a new card element to the HTML file with a project description and a read more link."

--- a/Projet.html
+++ b/Projet.html
@@ -309,6 +309,22 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="">
+                    <h3>Site en php/SQL/HTML/JS/CSS avec XAMP</h3>
+                    <h5>★★★★</h5>
+                </div>
+            </div>
+            <div class="face description">
+                <div class="contenu">
+                    <p>Login, Dashboard, Gestion des users, easter-egg, et autres. (PHP,SQL,HTML/JS/CSS,XAMP ...)</p>
+                    <a href="#" title="">Read More</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="face projet">
+                <div class="contenu">
+                    <img src="">
                     <h3>TODO</h3>
                     <!-- <h5>★★★★★</h5> -->
                 </div>
