On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -316,11 +316,11 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Login, Dashboard, Gestion des users, easter-egg, et autres. (PHP,SQL,HTML/JS/CSS,XAMP ...)</p>
-                    <a href="#" title="">Read More</a>
+                    <a href="https://www.apachefriends.org/" title="XAMP" rel="noopener noreferrer">Read More</a>
                 </div>
             </div>
         </div>
-
+        
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
