On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -7,6 +7,7 @@
     <meta name="author" content="Raykesh" />
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="HTML, CSS, JavaScript">
     <!-- <link rel="icon" type="image/x-icon" href="/images/iconeF.ico"> -->
     <link rel="shortcut icon" type="image/x-icon" href="./images/iconeF.ico?">
     <!-- <style>
